--- a/Bookshelf/Views/UpdatePassword.xaml
+++ b/Bookshelf/Views/UpdatePassword.xaml
@@ -1,36 +1,43 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Bookshelf.Views.UpdatePassword"
-             Style="{StaticResource ContentPage}" 
-             xmlns:Icons="clr-namespace:Bookshelf.Resources.Fonts.Styles"
-             xmlns:vm="clr-namespace:Bookshelf.ViewModels"
-             x:DataType="vm:UpdatePasswordVM"
-             xmlns:components = "clr-namespace:Bookshelf.Components"
-             Title="Recuperar senha" >
+<ContentPage
+    x:Class="Bookshelf.Views.UpdatePassword"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:Icons="clr-namespace:Bookshelf.Resources.Fonts.Styles"
+    xmlns:components="clr-namespace:Bookshelf.Components"
+    xmlns:vm="clr-namespace:Bookshelf.ViewModels"
+    Title="Recuperar senha"
+    x:DataType="vm:UpdatePasswordVM"
+    Style="{StaticResource ContentPage}">
     <ScrollView HorizontalOptions="CenterAndExpand">
         <StackLayout>
-            <Frame Style="{ StaticResource FramePrimary }" IsEnabled="{Binding IsNotBusy}">
+            <Frame IsEnabled="{Binding IsNotBusy}" Style="{StaticResource FramePrimary}">
                 <VerticalStackLayout>
-                    <components:BorderedEntry Text="{Binding Email}" LabelText="Email"/>
-                    <Button Text="Enviar Email"
-                            Style="{StaticResource BtnSuccess}" 
-                            Command="{Binding UpdatePasswordCommand}" 
-                            Margin="0,10,0,10"                             
-                            FontSize="20" ContentLayout="Left, 20" >
+                    <components:BorderedEntry LabelText="Email" Text="{Binding Email}" />
+                    <Button
+                        Margin="0,10,0,10"
+                        Command="{Binding UpdatePasswordCommand}"
+                        ContentLayout="Left, 20"
+                        FontSize="20"
+                        Style="{StaticResource BtnSuccess}"
+                        Text="Enviar Email">
                         <Button.ImageSource>
-                            <FontImageSource  FontFamily="FontAwesome" Color="#EDEDED" Glyph="{x:Static Icons:IconFont.Envelope}" Size="15"/>
+                            <FontImageSource
+                                FontFamily="FontAwesome"
+                                Glyph="{x:Static Icons:IconFont.Envelope}"
+                                Size="15"
+                                Color="#EDEDED" />
                         </Button.ImageSource>
                     </Button>
-                    <Label Text="*Será enviado um email com um link para a atualização de sua senha."
-                       VerticalOptions="End"
-                       HorizontalOptions="End"
-                       FontFamily="OpenSansRegular"
-                       TextColor="{StaticResource Gray100}"
-                       FontSize="10"
-                       FontAttributes="Italic"
-                       Margin="0,20,0,0"
-                       />
+                    <Label
+                        Margin="0,20,0,0"
+                        FontAttributes="Italic"
+                        FontFamily="OpenSansRegular"
+                        FontSize="10"
+                        HorizontalOptions="End"
+                        Text="*Será enviado um email com um link para a atualização de sua senha."
+                        TextColor="{StaticResource Gray100}"
+                        VerticalOptions="End" />
                 </VerticalStackLayout>
             </Frame>
         </StackLayout>
